--- a/QrCodeGenerator/QrCodeGenerator/Silver QrCode Generator.csproj
+++ b/QrCodeGenerator/QrCodeGenerator/Silver QrCode Generator.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Model\TextContent.cs" />
     <Compile Include="Model\UrlContent.cs" />
     <Compile Include="Model\vCardContent.cs" />
+    <Compile Include="Model\WifiContent.cs" />
     <Compile Include="Save.xaml.cs">
       <DependentUpon>Save.xaml</DependentUpon>
     </Compile>
@@ -118,6 +119,7 @@
     <Compile Include="ViewModel\TextViewModel.cs" />
     <Compile Include="ViewModel\UrlViewModel.cs" />
     <Compile Include="ViewModel\vCardViewModel.cs" />
+    <Compile Include="ViewModel\WifiViewModel.cs" />
     <Page Include="About.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -178,6 +180,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\WifiView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -196,6 +202,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
